Replace the URL with URI. closed #1